--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 RTSP =       "rtsp://admin:12345678A@10.0.6.13:554/ISAPI/Streaming/Channels/101"
-RTSP_local = "rtsp://admin:12345678A@192.168.31.141:554/ISAPI/Streaming/Channels/101
+RTSP_local = "rtsp://admin:12345678A@192.168.31.141:554/ISAPI/Streaming/Channels/101"
 MAP_API_KEY = "596a96c3-6bb5-434e-9252-e76cd6d76035"
 SERVER_HOST = "192.168.31.58"
 
