--- a/.env
+++ b/.env
@@ -2,11 +2,16 @@ RTSP =       "rtsp://admin:12345678A@10.0.6.13:554/ISAPI/Streaming/Channels/101"
 RTSP_local = "rtsp://admin:12345678A@192.168.31.141:554/ISAPI/Streaming/Channels/101"
 MAP_API_KEY = "596a96c3-6bb5-434e-9252-e76cd6d76035"
 
+
+# home connection
+#SERVER_HOST = "192.168.0.124"
+PORT = 12345
+
 # vpn connection
-SERVER_HOST = "10.0.6.167"
+#SERVER_HOST = "10.0.6.167"
 
 # directly connection
-# SERVER_HOST = "192.168.31.58"
+SERVER_HOST = "192.168.31.58"
 
 #router   192.168.31.1 
 #pc 192.168.31.58  - если через роутер
